Layout da tela de pedidos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="cidade">Cidade:</string>
     <string name="estado">Estado:</string>
     <string name="adicionar_cliente">Adicionar cliente</string>
+    <string name="pedidos">Pedidos:</string>
+    <string name="finalizados">Finalizados:</string>
 </resources>
