--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="quantidade">Quantidade:</string>
     <string name="valor_total">Valor total R$</string>
     <string name="adicionar">Adicionar</string>
+    <string name="voltar">Voltar</string>
     <string name="remover">Remover</string>
     <string name="cancelar">Cancelar</string>
     <string name="clientes">Clientes</string>
+    <string name="cliente">Cliente</string>
     <string name="primeira_compra">Primeira compra</string>
     <string name="primeira_compra_">Primeira compra:</string>
     <string name="ltima_compra">Última compra:</string>
